# TrainCritSpeed

./: .pre-commit-config.yaml  .style.yapf  LICENSE.md  README.md  critical_speed.py  cs_stochastic.py  new.py  pyproject.toml  requirements.txt  run_dispersion.py  run_soil_dispersion.py  run_stochastic.py  setup.cfg
.github/workflows/: tests.yml
TrainCritSpeed/: critical_speed.py  cs_stochastic.py  soil_dispersion.py  track_dispersion.py
tests/: test_critical_speed.py  test_cs_stochastic.py  test_dispersion_soil.py  test_dispersion_track.py
tests/data/: ballast_dispersion.txt  slab_dispersion.txt  soil_dispersion_1.txt  soil_dispersion_2.txt
