[metadata]
name = TrainCritSpeed
version = 1.0
author = Bruno Zuada Coelho
author_email = bruno.zuadacoelho@deltares.nl
description = Critical train speed
long_description = file: ReadMe.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: Microsoft :: Windows
    Operating System :: Unix

[options]
packages = TrainCritSpeed
include_package_data = True
install_requires =
    matplotlib==3.10.1
    numpy==2.1.3
    scipy==1.15.2
    tqdm==4.67.1
python_requires = >=3.11

[options.extras_require]
testing =
    pytest==8.3.5
